--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-    "name": "template-vite",
-    "description": "A Phaser 3 template using Vite.",
+    "name": "template-vite-ts",
+    "description": "A Phaser 3 TypeScript template using Vite.",
     "version": "1.3.0",
-    "type": "module",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/phaserjs/template-vite.git"
+        "url": "git+https://github.com/phaserjs/template-vite-ts.git"
     },
     "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
     "license": "MIT",
     "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
     "bugs": {
-        "url": "https://github.com/phaserjs/template-vite/issues"
+        "url": "https://github.com/phaserjs/template-vite-ts/issues"
     },
-    "homepage": "https://github.com/phaserjs/template-vite#readme",
+    "homepage": "https://github.com/phaserjs/template-vite-ts#readme",
     "scripts": {
         "dev": "vite --config vite/config.dev.mjs",
-        "build": "vite build --config vite/config.prod.mjs"
+        "build": "vite build --config vite/config.prod.mjs",
+        "lint": "npx eslint ."
     },
     "devDependencies": {
+        "@eslint/js": "^9.4.0",
+        "@types/eslint__js": "^8.42.3",
+        "eslint": "^8.57.0",
+        "prettier": "3.3.1",
         "terser": "^5.31.0",
+        "typescript": "^5.4.5",
+        "typescript-eslint": "^7.12.0",
         "vite": "^5.2.11"
     },
     "dependencies": {
