--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.4.0",
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "@types/eslint__js": "^8.42.3",
         "eslint": "^8.57.0",
+        "eslint-plugin-svelte": "^2.39.0",
         "prettier": "3.3.1",
+        "svelte-preprocess": "^5.1.4",
         "terser": "^5.31.0",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.12.0",
         "vite": "^5.2.11"
     },
     "dependencies": {
-        "phaser": "^3.80.1"
+        "phaser": "^3.80.1",
+        "svelte": "^4.2.18"
     }
 }
