--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
         "target": "ES2020",
         "useDefineForClassFields": true,
         "module": "ESNext",
@@ -17,13 +18,12 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
-        "types": ["svelte"],
         "typeRoots": ["@types", "./node_modules/@types"],
         "paths": {
             "@components/*": ["src/components/*"],
             "@lib/*": ["src/lib/*"]
         }
     },
-    "include": ["src/**/*", "src/**/*.svelte", "@types/**/*.d.ts"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules"]
 }
