--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "terser": "^5.31.0",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.12.0",
-        "vite": "^5.2.11"
+        "vite": "^5.2.11",
+        "vite-tsconfig-paths": "^4.3.2"
     },
     "dependencies": {
         "phaser": "^3.80.1"
