--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,10 @@
         "noFallthroughCasesInSwitch": true,
         "typeRoots": ["@types", "./node_modules/@types"],
         "paths": {
-            "@components/*": ["src/components/*"],
-            "@lib/*": ["src/lib/*"]
+            "@components/*": ["./src/components/*"],
+            "@lib/*": ["./src/lib/*"]
         }
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "@types/**/*"],
     "exclude": ["node_modules"]
 }
